--- a/brooklyn-ui/src/main/webapp/index.html
+++ b/brooklyn-ui/src/main/webapp/index.html
@@ -55,7 +55,7 @@
                 <ul class="nav">
                     <li><a href="#v1/home" class="nav1 nav1_home">Home</a></li>
                     <!-- TODO extend API with v1/editor -->
-                    <li><a href="#v1/editor" class="nav1 nav1_editor">Editor</a></li>
+                    <li><a href="#v1/editor/" class="nav1 nav1_editor">Editor</a></li>
                     <li><a href="#v1/applications" class="nav1 nav1_apps">Applications</a></li>
                     <li><a href="#v1/catalog" class="nav1 nav1_catalog">Catalog</a></li>
                     <li class="dropdown">
