--- a/brooklyn-ui/src/main/webapp/assets/tpl/editor/page.html
+++ b/brooklyn-ui/src/main/webapp/assets/tpl/editor/page.html
@@ -21,12 +21,9 @@ under the License.
         <div class="span12 composer" id="composer">
             <div class="navbar_top">
                 <h3>Blueprint</h3>
-                <!-- div class="apps-tree-toolbar">
-                    <i class="icon-br-refresh refresh handy"></i>
-                </div -->
                 <div class="apps-tree-toolbar">
-                    <button id="button-run" class="btn btn-success btn-sm">Run</button>
-                    <button id="button-delete" class="btn btn-danger btn-sm">Delete</button>
+                    <button id="button-run" class="btn btn-success btn-sm">Create</button>
+                    <button id="button-delete" class="btn btn-danger btn-sm">Reset</button>
                 </div>
             </div>
             <div class="navbar_main_wrapper">
@@ -44,18 +41,5 @@ under the License.
                 </div>
             </div>
         </div>
-
-        <!-- div class="span8" id="details">
-            <ul class="nav nav-tabs entity-tabs">
-                <li><a data-target="#details" data-toggle="tab">Details</a></li>
-                <li><a data-target="#yaml" data-toggle="tab">blueprint</a></li>
-            </ul>
-            <div class="tab-content">
-                <div class="tab-pane" id="details"><i>Nothing selected</i></div>
-                <div class="tab-pane" id="yaml"><i>Nothing selected</i>
-                    <textarea id='run-blueprint' name='yaml'></textarea>
-                </div>
-            </div>
-        </div -->
     </div>
 </div>
