Add catalog redirects to editor
otherChanges:
- renamed editor -> composer
- added YAML verification before POST
- added extra logic to editor

--- a/brooklyn-ui/src/main/webapp/assets/tpl/editor/page.html
+++ b/brooklyn-ui/src/main/webapp/assets/tpl/editor/page.html
@@ -20,7 +20,7 @@ under the License.
     <div class="row row-fluid">
         <div class="span12 composer" id="composer">
             <div class="navbar_top">
-                <h3>Blueprint</h3>
+                <h3>YAML Composer</h3>
                 <div class="apps-tree-toolbar">
                     <button id="button-run" class="btn btn-success btn-sm">Create</button>
                     <button id="button-delete" class="btn btn-danger btn-sm">Reset</button>
