fixxed editor tabSize & auto complete css

--- a/brooklyn-ui/src/main/webapp/index.html
+++ b/brooklyn-ui/src/main/webapp/index.html
@@ -28,7 +28,7 @@
 
     <!-- TODO: following CSS to config.js -->
     <link rel="stylesheet" href="/assets/css/codemirror.css">
-    <link rel="stylesheet" href="/assets/css/addon/hint/show-hint.css">
+    <link rel="stylesheet" href="/assets/css/show-hint.css">
     <!-- link rel="stylesheet" href="/assets/css/complete.css" -->
 
     <link rel="stylesheet" href="/assets/css/styles.css">
